--- a/package.json
+++ b/package.json
@@ -19,23 +19,34 @@
   },
   "homepage": "https://github.com/hoangvvo/nextjs-mongodb-app#readme",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.0",
     "@sendgrid/mail": "^6.4.0",
+    "autoprefixer": "^9.7.4",
+    "aws-sdk": "^2.630.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.18.1",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "formidable": "^1.2.1",
+    "fs": "0.0.1-security",
     "isomorphic-unfetch": "^3.0.0",
+    "mailgun-js": "^0.22.0",
     "mongodb": "^3.4.1",
     "multer": "^1.4.2",
-    "next": "^9.1.7",
+    "multer-s3": "^2.9.0",
+    "next": "^9.3.4",
     "next-connect": "^0.6.0",
     "next-session": "^2.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "sharp": "^0.25.2",
     "sweetalert2": "^9.5.4",
+    "swr": "^0.2.0",
+    "tailwindcss": "^1.2.0",
     "validator": "^12.1.0"
   },
   "devDependencies": {
